feat: support multiple accounts across clients
